# laughing-octo-tribble

./: .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
docs/pyaetherometry/: index.rst
docs/pyaetherometry/About/: vision_statement.rst
docs/pyaetherometry/Constants/: constants.rst
docs/pyaetherometry/Formulary/: formulary.rst
licenses/: LICENSE.rst
pyaetherometry/: __init__.py
pyaetherometry/example_subpkg/: setup_package.py
pyaetherometry/utils/: __init__.py
